objects/LLC_BI__Pricing_Covenant__c.object
<CustomObject>
    <description>Join object between Pricing Rate Component and Covenants</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This field is automatically populated via formula. It identifies whether or not a Pricing Covenant record is active. Checked = True, Unchecked = False.</description>
        <formula>LLC_BI__Covenant2__r.LLC_BI__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant2__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Covenant Mgmt record associated to the Pricing Covenant record.</description>
        <label>Covenant Mgmt</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Pricing Covenants</relationshipLabel>
        <relationshipName>Pricing_Covenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Rate_Component__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Pricing Rate Component record associated to the Pricing Covenant record.</description>
        <label>Pricing Rate Component</label>
        <referenceTo>LLC_BI__Pricing_Rate_Component__c</referenceTo>
        <relationshipLabel>Pricing Covenants</relationshipLabel>
        <relationshipName>Pricing_Covenants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rules__c</fullName>
        <description>This field is optional. It is automatically populated. It is the string of information displayed in the Rate Stream summary when an optional performance rule is added to the rate stream.</description>
        <label>Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Covenant</label>
    <nameField>
        <label>Pricing Covenant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>